--- a/index.ipynb
+++ b/index.ipynb
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA']"
+       "['Mexico']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries[4:5]"
+    "countries[3:4] = 'Me'"
    ]
   },
   {
