Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,8 @@
     " 'Italy',\n",
     " 'Canada',\n",
     " 'South Korea',\n",
-    "  'Malta'   ] # add code here"
+    "  'Malta'   ] \n",
+    "\n"
    ]
   },
   {
