Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
     " 'South Korea',\n",
     "  'Malta'   ] \n",
     "\n",
-    "countries.append('Mal')"
+    "countries.append('Malta')"
    ]
   },
   {
@@ -280,7 +280,8 @@
     " 'Canada',\n",
     " 'South Korea',\n",
     " 'Malta',\n",
-    " 'Thailand' ] # add code here"
+    " 'Thailand' ] \n",
+    "\n"
    ]
   },
   {
