Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,7 @@
     " 'Argentina',\n",
     " 'Italy',\n",
     " 'Canada',\n",
-    " 'South Korea',\n",
-    "  'Malta'   ] \n",
+    " 'South Korea',] \n",
     "\n",
     "countries.append('Malta')"
    ]
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
