Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +277,7 @@
     " 'Argentina',\n",
     " 'Italy',\n",
     " 'Canada',\n",
-    " 'South Korea',\n",
-    " 'Malta',\n",
-    " 'Thailand' ] \n",
+    " 'South Korea',] \n",
     "\n"
    ]
   },
