--- a/index.ipynb
+++ b/index.ipynb
@@ -305,23 +305,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries = ['Croatia',\n",
-    " 'USA',\n",
-    " 'Argentina',\n",
-    " 'Mexico',\n",
-    " 'USA',\n",
-    " 'Morocco',\n",
-    " 'USA',\n",
-    " 'Finland',\n",
-    " 'Argentina',\n",
-    " 'Italy',\n",
-    " 'Canada',\n",
-    " 'South Korea',\n",
-    "  'Malta'   ] # add code here"
+    "countries"
    ]
   },
   {
