--- a/index.ipynb
+++ b/index.ipynb
@@ -305,35 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Thailand']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-41-638ea378e93d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-638ea378e93d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    countries(6) = 'USA'\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     ]
     }
    ],
    "source": [
-    "countries(6)"
+    "countries(6) = 'USA'"
    ]
   },
   {
