--- a/index.ipynb
+++ b/index.ipynb
@@ -305,20 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-41-638ea378e93d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-638ea378e93d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    countries(6) = 'USA'\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries(6) = 'USA'"
+    "countries[6] = 'USA'"
    ]
   },
   {
