--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list"
+    "unique_countries = list(countries)"
    ]
   },
   {
