Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)"
+    "unique_countries = set(countries)"
    ]
   },
   {
